// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно отрендерить тайтл активного объявления 1`] = `
<Link
  className="SalesItemTitle"
  metrika="clicks,open"
  target="blank"
  url="link/card/?category=cars&section=false&mark=&model=&sale_id=&sale_hash="
>
  Chery Tiggo (T11) I
  <SalesItemPaidOffer
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "category": "cars",
        "status": "ACTIVE",
        "vehicle_info": Object {
          "mark_info": Object {
            "name": "Chery",
          },
          "model_info": Object {
            "name": "Tiggo (T11)",
          },
          "super_gen": Object {
            "id": 1,
            "name": "I",
          },
        },
      }
    }
  />
</Link>
`;

exports[`должен правильно отрендерить тайтл активного объявления мото/комтс 1`] = `
<Link
  className="SalesItemTitle"
  metrika="clicks,open"
  target="blank"
  url="link/card/?category=cars&section=false&mark=&model=&sale_id=&sale_hash="
>
  Chery Tiggo (T11)
  <SalesItemPaidOffer
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "category": "cars",
        "status": "ACTIVE",
        "vehicle_info": Object {
          "mark_info": Object {
            "name": "Chery",
          },
          "model_info": Object {
            "name": "Tiggo (T11)",
          },
        },
      }
    }
  />
</Link>
`;

exports[`должен правильно отрендерить тайтл драфта объявления 1`] = `
<Link
  className="SalesItemTitle SalesItemTitle_inactiveEditable"
  metrika="draft_in_lk,click"
  target="_blank"
  url="link/form/?category=cars&section=false&form_type=add&from_lk=true"
>
  Chery Tiggo (T11) I
  <SalesItemPaidOffer
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "category": "cars",
        "status": "DRAFT",
        "vehicle_info": Object {
          "mark_info": Object {
            "name": "Chery",
          },
          "model_info": Object {
            "name": "Tiggo (T11)",
          },
          "super_gen": Object {
            "id": 1,
            "name": "I",
          },
        },
      }
    }
  />
</Link>
`;

exports[`должен правильно отрендерить тайтл забаненного объявления без возможности редактирования 1`] = `
<div
  className="SalesItemTitle"
>
  Chery Tiggo (T11) I
  <SalesItemPaidOffer
    offer={
      Object {
        "actions": Object {
          "edit": false,
        },
        "category": "cars",
        "status": "BANNED",
        "vehicle_info": Object {
          "mark_info": Object {
            "name": "Chery",
          },
          "model_info": Object {
            "name": "Tiggo (T11)",
          },
          "super_gen": Object {
            "id": 1,
            "name": "I",
          },
        },
      }
    }
  />
</div>
`;

exports[`должен правильно отрендерить тайтл забаненного объявления с возможностью редактирования 1`] = `
<Link
  className="SalesItemTitle SalesItemTitle_inactiveEditable"
  metrika="clicks,open"
  target="blank"
  url="link/card/?category=cars&section=false&mark=&model=&sale_id=&sale_hash="
>
  Chery Tiggo (T11) I
  <SalesItemPaidOffer
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "category": "cars",
        "status": "BANNED",
        "vehicle_info": Object {
          "mark_info": Object {
            "name": "Chery",
          },
          "model_info": Object {
            "name": "Tiggo (T11)",
          },
          "super_gen": Object {
            "id": 1,
            "name": "I",
          },
        },
      }
    }
  />
</Link>
`;

exports[`должен правильно отрендерить тайтл неактивного объявления 1`] = `
<Link
  className="SalesItemTitle SalesItemTitle_inactiveEditable"
  metrika="clicks,open"
  target="blank"
  url="link/card/?category=cars&section=false&mark=&model=&sale_id=&sale_hash="
>
  Chery Tiggo (T11) I
  <SalesItemPaidOffer
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "category": "cars",
        "status": "INACTIVE",
        "vehicle_info": Object {
          "mark_info": Object {
            "name": "Chery",
          },
          "model_info": Object {
            "name": "Tiggo (T11)",
          },
          "super_gen": Object {
            "id": 1,
            "name": "I",
          },
        },
      }
    }
  />
</Link>
`;

exports[`должен правильно отрендерить тайтл протухшего объявления 1`] = `
<Link
  className="SalesItemTitle SalesItemTitle_inactiveEditable"
  metrika="clicks,open"
  target="blank"
  url="link/card/?category=cars&section=false&mark=&model=&sale_id=&sale_hash="
>
  Chery Tiggo (T11) I
  <SalesItemPaidOffer
    offer={
      Object {
        "actions": Object {
          "edit": true,
        },
        "category": "cars",
        "status": "EXPIRED",
        "vehicle_info": Object {
          "mark_info": Object {
            "name": "Chery",
          },
          "model_info": Object {
            "name": "Tiggo (T11)",
          },
          "super_gen": Object {
            "id": 1,
            "name": "I",
          },
        },
      }
    }
  />
</Link>
`;
